--- a/Templates/notes.tmTemplate/info.plist
+++ b/Templates/notes.tmTemplate/info.plist
@@ -7,8 +7,8 @@
 	<key>extension</key>
 	<string>txt</string>
 	<key>name</key>
-	<string>Notes folder</string>
+	<string>notes</string>
 	<key>uuid</key>
-	<string>9B3BE20F-92E8-44FE-9D51-7895F0CEF188</string>
+	<string>4A939E76-47AD-44B5-9C43-B0CB46B6480E</string>
 </dict>
 </plist>
