--- a/Templates/usefuls.tmTemplate/info.plist
+++ b/Templates/usefuls.tmTemplate/info.plist
@@ -7,8 +7,8 @@
 	<key>extension</key>
 	<string>blah</string>
 	<key>name</key>
-	<string>Useful folder</string>
+	<string>usefuls</string>
 	<key>uuid</key>
-	<string>F0F25580-265C-4F2A-B108-3B761C3CBB01</string>
+	<string>395E08D3-6AE5-46C7-A10A-7E14D56C19A4</string>
 </dict>
 </plist>
