--- a/Templates/easypage.tmTemplate/info.plist
+++ b/Templates/easypage.tmTemplate/info.plist
@@ -13,8 +13,8 @@ fi
 	<key>extension</key>
 	<string>txt</string>
 	<key>name</key>
-	<string>easypage1</string>
+	<string>easypage</string>
 	<key>uuid</key>
-	<string>54386838-FFF0-4864-85A5-B9AB97B49014</string>
+	<string>E78786D9-5DF3-498C-8F9F-035B1BE7C8EF</string>
 </dict>
 </plist>
