--- a/Templates/hardpage.tmTemplate/info.plist
+++ b/Templates/hardpage.tmTemplate/info.plist
@@ -14,8 +14,8 @@ fi</string>
 	<key>extension</key>
 	<string>mm</string>
 	<key>name</key>
-	<string>hardpage1</string>
+	<string>hardpage</string>
 	<key>uuid</key>
-	<string>48080B29-380A-45A2-9226-ADF6180D9514</string>
+	<string>A742FBE7-8D60-4C5C-AC88-5ACF049B40B8</string>
 </dict>
 </plist>
