applescript to shell script

--- a/info.plist
+++ b/info.plist
@@ -156,7 +156,9 @@
 		<string>D6844EF1-342B-46D9-A687-CB402F7F4209</string>
 		<string>C5B7D62C-BED8-49BA-BB94-E1534BF3A694</string>
 		<string>375E8979-34AA-4786-8ED1-D951CD8872D2</string>
+		<string>BDFE1510-28E2-45AD-9747-FD4BC1B989C8</string>
 		<string>B0691F9F-D279-48CB-8959-2C9426579002</string>
+		<string>84061922-466E-4152-9726-9E1DC74458C3</string>
 		<string>7D87F38B-A972-4F61-B9C0-7D6D15EEED38</string>
 		<string>0C3868E4-F96B-4E55-B204-1DCB5A20748B</string>
 		<string>CC3E01E0-E8C1-4A08-BDAF-02B1DF7C81D3</string>
