--- a/Templates/notes.tmTemplate/info.plist
+++ b/Templates/notes.tmTemplate/info.plist
@@ -2,16 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>commands</key>
-	<array>
-		<dict>
-			<key>command</key>
-			<string>changeTabsToSpaces:</string>
-		</dict>
-	</array>
+	<key>command</key>
+	<string># store notes and results and etc...</string>
+	<key>extension</key>
+	<string>txt</string>
 	<key>name</key>
-	<string>Soften Tabs</string>
+	<string>notes</string>
 	<key>uuid</key>
-	<string>887D24EC-3161-4C52-B545-C8DAC0F29236</string>
+	<string>4A939E76-47AD-44B5-9C43-B0CB46B6480E</string>
 </dict>
 </plist>
