--- a/Templates/usefuls.tmTemplate/info.plist
+++ b/Templates/usefuls.tmTemplate/info.plist
@@ -2,16 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>commands</key>
-	<array>
-		<dict>
-			<key>command</key>
-			<string>changeTabsToSpaces:</string>
-		</dict>
-	</array>
+	<key>command</key>
+	<string># date +%Y-%m-%d:%U</string>
+	<key>extension</key>
+	<string>blah</string>
 	<key>name</key>
-	<string>Soften Tabs</string>
+	<string>usefuls</string>
 	<key>uuid</key>
-	<string>887D24EC-3161-4C52-B545-C8DAC0F29236</string>
+	<string>395E08D3-6AE5-46C7-A10A-7E14D56C19A4</string>
 </dict>
 </plist>
