--- a/info.plist
+++ b/info.plist
@@ -1,24 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>deleted</key>
-	<array/>
+	<array>
+		<string>6000D7DE-25FA-4146-B8AE-BBD6C83CAEC1</string>
+		<string>016FF027-31EE-4964-9F07-0794393D87F6</string>
+		<string>8A9CFA77-4315-4A81-861B-CE4482B28590</string>
+		<string>7624831E-5633-4360-BB87-2A9875E00188</string>
+		<string>4217F9BC-BB15-44AA-94C9-37720E5806AA</string>
+		<string>DF8A568B-BC36-4702-A2D0-81A2E3ECA403</string>
+		<string>90EBFE57-A41A-4A6B-A89F-EC18031E363C</string>
+		<string>F0F25580-265C-4F2A-B108-3B761C3CBB01</string>
+		<string>0C54DD8A-F30F-4843-A78F-E8DDC9A844EE</string>
+		<string>9B3BE20F-92E8-44FE-9D51-7895F0CEF188</string>
+		<string>48080B29-380A-45A2-9226-ADF6180D9514</string>
+		<string>54386838-FFF0-4864-85A5-B9AB97B49014</string>
+		<string>62C57905-5C20-4A7D-97F3-55561B79C86B</string>
+		<string>AB1569C2-A1E0-4839-B0D9-FCDF9C99C56B</string>
+		<string>43612AEA-71FB-402C-B71F-19D4F9E2D3F6</string>
+		<string>45761A20-58F2-4AE9-B361-506AE704ED89</string>
+		<string>D80D53D4-A020-4A37-8DD8-CAEB0A40F4B8</string>
+	</array>
 	<key>mainMenu</key>
 	<dict>
 		<key>items</key>
 		<array>
+			<string>6C8A32D4-6EC0-406E-B80B-FDA1F65AD40C</string>
+			<string>04492DE5-97CF-4576-96D4-7E75C5288988</string>
+			<string>------------------------------------</string>
+			<string>552E6BE4-4FAB-4D2A-89A8-B309A080C15E</string>
 			<string>8F3CE421-036B-43FE-BCA1-B433A889AC6B</string>
 			<string>F2BFFCEC-C286-4C08-9CB6-D4D497FA68DC</string>
 			<string>898C0B28-2A94-4C77-AE0B-D7C4C055BDA2</string>
 			<string>173FECA9-2E92-4116-AF95-2BD94AA7C9F1</string>
+			<string>8CEA582D-B58D-4CB4-A65F-8CD7A3CD840A</string>
+			<string>AB1BF14D-14FF-415B-B63C-D7A67F29D975</string>
 			<string>------------------------------------</string>
-			<string>62C57905-5C20-4A7D-97F3-55561B79C86B</string>
 			<string>60F3ACDC-C229-47AE-B4FB-B8154A4F8483</string>
 			<string>F16F994A-7AE5-46CD-A342-ACB325302180</string>
-			<string>45F92B81-6F0E-11D9-A1E4-000D9332809C</string>
 			<string>------------------------------------</string>
-			<string>6000D7DE-25FA-4146-B8AE-BBD6C83CAEC1</string>
+			<string>A1DBCCBC-B34E-4048-B3EE-FA4FE2D93698</string>
+			<string>FCA39EB2-354F-49BB-B6A0-C92F518F54CE</string>
+			<string>F194A824-4C9D-45BB-9C98-DA6C6E675D6D</string>
+			<string>9367029B-3E65-46F1-85AE-FD85AE9849A1</string>
+			<string>EE1CB46C-411E-4B90-844A-09F433031ED6</string>
+			<string>------------------------------------</string>
+			<string>887D24EC-3161-4C52-B545-C8DAC0F29236</string>
+			<string>D6844EF1-342B-46D9-A687-CB402F7F4209</string>
+			<string>C5B7D62C-BED8-49BA-BB94-E1534BF3A694</string>
+			<string>375E8979-34AA-4786-8ED1-D951CD8872D2</string>
+			<string>BDFE1510-28E2-45AD-9747-FD4BC1B989C8</string>
+			<string>4213291A-425F-4106-AD4F-11715D3A8A04</string>
+			<string>4B74F2DE-E051-4E8D-9124-EBD90A2CDD2B</string>
+			<string>20645B84-5D52-434F-9F98-E210B18843CB</string>
 		</array>
 		<key>submenus</key>
 		<dict>
@@ -33,14 +68,41 @@
 				<key>name</key>
 				<string>Slug</string>
 			</dict>
-			<key>898C0B28-2A94-4C77-AE0B-D7C4C055BDA2</key>
+			<key>552E6BE4-4FAB-4D2A-89A8-B309A080C15E</key>
 			<dict>
 				<key>items</key>
 				<array>
-					<string>016FF027-31EE-4964-9F07-0794393D87F6</string>
+					<string>194EEC32-F924-495D-9703-D06689457285</string>
+					<string>BD02A332-8A2F-4F79-98A1-E0E2B46FD1B2</string>
+					<string>F32A81C8-687B-46DD-9FAF-07E2B51BFAEC</string>
+					<string>85882AD7-4C93-429E-8F17-885615ADED6A</string>
+					<string>C73BE299-27A4-40B1-B8A6-207311933AFE</string>
+					<string>5BBEE531-FECE-4A3F-ABF3-A7FE0C10A6AE</string>
 				</array>
 				<key>name</key>
+				<string>macrohelp</string>
+			</dict>
+			<key>898C0B28-2A94-4C77-AE0B-D7C4C055BDA2</key>
+			<dict>
+				<key>items</key>
+				<array/>
+				<key>name</key>
 				<string>Note</string>
+			</dict>
+			<key>8CEA582D-B58D-4CB4-A65F-8CD7A3CD840A</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>6F9D791B-B8E5-456D-A574-1B5C71F232FF</string>
+					<string>AE151470-1263-4C8A-A3CD-D31CD54EA640</string>
+					<string>72701480-EE5E-42A1-803E-88A1355EC08A</string>
+					<string>046B8756-0644-4A58-B409-C2024788D4AA</string>
+					<string>E2FBBBAB-8552-42E7-971A-F80E81AED784</string>
+					<string>9E97DDE6-4284-48E2-9D26-203F2B94AC26</string>
+					<string>E8BF2978-0555-4695-AC8C-6FE6E5C9C15D</string>
+				</array>
+				<key>name</key>
+				<string>testing</string>
 			</dict>
 			<key>8F3CE421-036B-43FE-BCA1-B433A889AC6B</key>
 			<dict>
@@ -50,6 +112,21 @@
 				</array>
 				<key>name</key>
 				<string>JS</string>
+			</dict>
+			<key>AB1BF14D-14FF-415B-B63C-D7A67F29D975</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>18B3DB88-CD62-4851-A6C6-1125B4353A5E</string>
+					<string>0E930EAC-4C42-4C86-99DA-6EE9EEA389DA</string>
+					<string>3173B12D-6A02-47C4-8E34-008E89BE7B4F</string>
+					<string>497E4A65-38FC-4D9C-9073-B9D125B5B8D6</string>
+					<string>3E4EC05D-710B-41EA-A2A2-F1C033A5039D</string>
+					<string>9C98DFA6-D607-43F9-B48D-57EEACAB1B7D</string>
+					<string>3466BA71-3072-48D6-AF0F-47B880AC6CA7</string>
+				</array>
+				<key>name</key>
+				<string>armyknife</string>
 			</dict>
 			<key>F2BFFCEC-C286-4C08-9CB6-D4D497FA68DC</key>
 			<dict>
@@ -66,26 +143,60 @@
 	<string>_drt</string>
 	<key>ordering</key>
 	<array>
-		<string>9B3BE20F-92E8-44FE-9D51-7895F0CEF188</string>
-		<string>F0F25580-265C-4F2A-B108-3B761C3CBB01</string>
-		<string>90EBFE57-A41A-4A6B-A89F-EC18031E363C</string>
-		<string>DF8A568B-BC36-4702-A2D0-81A2E3ECA403</string>
-		<string>9367029B-3E65-46F1-85AE-FD85AE9849A1</string>
-		<string>B9936935-71A1-4A4B-8903-2E845E8E5364</string>
-		<string>58533948-4966-4B8A-91C7-93D7200EC223</string>
-		<string>016FF027-31EE-4964-9F07-0794393D87F6</string>
-		<string>3FD687F2-614E-4DF7-9D2E-29FB836C093B</string>
-		<string>62C57905-5C20-4A7D-97F3-55561B79C86B</string>
-		<string>48756B79-959D-4ECA-A50E-AD117E7E0B64</string>
+		<string>4A939E76-47AD-44B5-9C43-B0CB46B6480E</string>
+		<string>918AA3BC-2A40-4A75-9ED7-071525FE59CF</string>
+		<string>395E08D3-6AE5-46C7-A10A-7E14D56C19A4</string>
+		<string>E78786D9-5DF3-498C-8F9F-035B1BE7C8EF</string>
+		<string>A742FBE7-8D60-4C5C-AC88-5ACF049B40B8</string>
+		<string>A1DBCCBC-B34E-4048-B3EE-FA4FE2D93698</string>
+		<string>FCA39EB2-354F-49BB-B6A0-C92F518F54CE</string>
 		<string>6F9003F7-F4A0-43CB-95E8-B11A6A6BB37F</string>
-		<string>AB1569C2-A1E0-4839-B0D9-FCDF9C99C56B</string>
+		<string>48756B79-959D-4ECA-A50E-AD117E7E0B64</string>
+		<string>58533948-4966-4B8A-91C7-93D7200EC223</string>
+		<string>B9936935-71A1-4A4B-8903-2E845E8E5364</string>
+		<string>3FD687F2-614E-4DF7-9D2E-29FB836C093B</string>
+		<string>04492DE5-97CF-4576-96D4-7E75C5288988</string>
+		<string>6C8A32D4-6EC0-406E-B80B-FDA1F65AD40C</string>
+		<string>9E97DDE6-4284-48E2-9D26-203F2B94AC26</string>
+		<string>E8BF2978-0555-4695-AC8C-6FE6E5C9C15D</string>
+		<string>9367029B-3E65-46F1-85AE-FD85AE9849A1</string>
 		<string>60F3ACDC-C229-47AE-B4FB-B8154A4F8483</string>
 		<string>F16F994A-7AE5-46CD-A342-ACB325302180</string>
-		<string>45F92B81-6F0E-11D9-A1E4-000D9332809C</string>
-		<string>E1EC0409-1310-4D87-88DC-E01CB846D23F</string>
-		<string>CC3E01E0-E8C1-4A08-BDAF-02B1DF7C81D3</string>
-		<string>6000D7DE-25FA-4146-B8AE-BBD6C83CAEC1</string>
+		<string>5BBEE531-FECE-4A3F-ABF3-A7FE0C10A6AE</string>
+		<string>E2FBBBAB-8552-42E7-971A-F80E81AED784</string>
+		<string>85882AD7-4C93-429E-8F17-885615ADED6A</string>
+		<string>046B8756-0644-4A58-B409-C2024788D4AA</string>
+		<string>6F9D791B-B8E5-456D-A574-1B5C71F232FF</string>
+		<string>AE151470-1263-4C8A-A3CD-D31CD54EA640</string>
+		<string>C73BE299-27A4-40B1-B8A6-207311933AFE</string>
+		<string>72701480-EE5E-42A1-803E-88A1355EC08A</string>
+		<string>F194A824-4C9D-45BB-9C98-DA6C6E675D6D</string>
+		<string>20645B84-5D52-434F-9F98-E210B18843CB</string>
+		<string>194EEC32-F924-495D-9703-D06689457285</string>
+		<string>BD02A332-8A2F-4F79-98A1-E0E2B46FD1B2</string>
+		<string>F32A81C8-687B-46DD-9FAF-07E2B51BFAEC</string>
+		<string>375E8979-34AA-4786-8ED1-D951CD8872D2</string>
+		<string>C5B7D62C-BED8-49BA-BB94-E1534BF3A694</string>
 		<string>887D24EC-3161-4C52-B545-C8DAC0F29236</string>
+		<string>EE1CB46C-411E-4B90-844A-09F433031ED6</string>
+		<string>D6844EF1-342B-46D9-A687-CB402F7F4209</string>
+		<string>E1EC0409-1310-4D87-88DC-E01CB846D23F</string>
+		<string>B0691F9F-D279-48CB-8959-2C9426579002</string>
+		<string>84061922-466E-4152-9726-9E1DC74458C3</string>
+		<string>7D87F38B-A972-4F61-B9C0-7D6D15EEED38</string>
+		<string>CC3E01E0-E8C1-4A08-BDAF-02B1DF7C81D3</string>
+		<string>FA4321C2-92BB-4630-BB2F-D8894D61D5EE</string>
+		<string>BDFE1510-28E2-45AD-9747-FD4BC1B989C8</string>
+		<string>4213291A-425F-4106-AD4F-11715D3A8A04</string>
+		<string>497E4A65-38FC-4D9C-9073-B9D125B5B8D6</string>
+		<string>18B3DB88-CD62-4851-A6C6-1125B4353A5E</string>
+		<string>0E930EAC-4C42-4C86-99DA-6EE9EEA389DA</string>
+		<string>3173B12D-6A02-47C4-8E34-008E89BE7B4F</string>
+		<string>3E4EC05D-710B-41EA-A2A2-F1C033A5039D</string>
+		<string>3466BA71-3072-48D6-AF0F-47B880AC6CA7</string>
+		<string>9C98DFA6-D607-43F9-B48D-57EEACAB1B7D</string>
+		<string>0C3868E4-F96B-4E55-B204-1DCB5A20748B</string>
+		<string>4B74F2DE-E051-4E8D-9124-EBD90A2CDD2B</string>
 	</array>
 	<key>uuid</key>
 	<string>8EF53028-CED5-461A-9A64-894B2C74D0BE</string>
