--- a/info.plist
+++ b/info.plist
@@ -143,6 +143,7 @@
 	<string>_drt</string>
 	<key>ordering</key>
 	<array>
+		<string>BA307106-0D8E-4409-B9C2-669C555BC4B7</string>
 		<string>4A939E76-47AD-44B5-9C43-B0CB46B6480E</string>
 		<string>918AA3BC-2A40-4A75-9ED7-071525FE59CF</string>
 		<string>395E08D3-6AE5-46C7-A10A-7E14D56C19A4</string>
